[gd_scene load_steps=9 format=3 uid="uid://v7k0gr5qm1jm"]

[ext_resource type="Script" uid="uid://cyh0d64pfygbl" path="res://scripts/pause_menu_controller.gd" id="1_uws5g"]
[ext_resource type="PackedScene" uid="uid://cnmu4k37qncn8" path="res://scenes/overlaid_menus/pause_menu.tscn" id="2_ytgjh"]
[ext_resource type="Script" uid="uid://crbo2e4ndbyvk" path="res://scripts/level_list_loader.gd" id="3_4e4kc"]
[ext_resource type="PackedScene" uid="uid://bkcsjsk2ciff" path="res://addons/maaacks_game_template/base/scenes/music_players/background_music_player.tscn" id="4_av8fb"]
[ext_resource type="PackedScene" uid="uid://dbuv0htkikcv4" path="res://scenes/loading_screen/level_loading_screen.tscn" id="5_0x2og"]
[ext_resource type="Material" uid="uid://c8bvc6qqux5b7" path="res://scripts/shaders/image_filter/image_filters_mat.tres" id="6_wil7d"]
[ext_resource type="Script" uid="uid://tooek7mdq54x" path="res://scenes/game_scene/configurable_sub_viewport.gd" id="7_sp67m"]
[ext_resource type="Script" uid="uid://yakisxcmflgk" path="res://scripts/level_list_manager.gd" id="8_vja8h"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseMenuController" type="Node" parent="." node_paths=PackedStringArray("focused_viewport")]
script = ExtResource("1_uws5g")
pause_menu_packed = ExtResource("2_ytgjh")
focused_viewport = NodePath("../ViewportContainer/ConfigurableSubViewport")

[node name="LevelLoader" type="Node" parent="." node_paths=PackedStringArray("level_container")]
script = ExtResource("3_4e4kc")
level_container = NodePath("../ViewportContainer/ConfigurableSubViewport")
files = Array[String](["res://scenes/game_scene/score_attack_game.tscn"])

[node name="BackgroundMusicPlayer" parent="." instance=ExtResource("4_av8fb")]

[node name="LevelLoadingScreen" parent="." instance=ExtResource("5_0x2og")]
visible = false

[node name="ViewportContainer" type="SubViewportContainer" parent="."]
material = ExtResource("6_wil7d")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="ConfigurableSubViewport" type="SubViewport" parent="ViewportContainer"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
audio_listener_enable_2d = true
audio_listener_enable_3d = true
size = Vector2i(1280, 720)
render_target_update_mode = 4
script = ExtResource("7_sp67m")

[node name="LevelListManager" type="Node" parent="." node_paths=PackedStringArray("level_list_loader", "level_loading_screen")]
script = ExtResource("8_vja8h")
level_list_loader = NodePath("../LevelLoader")
main_menu_scene = "uid://c63y6b25bs4bk"
ending_scene = "uid://bagraegk311h0"
level_loading_screen = NodePath("../LevelLoadingScreen")

[connection signal="level_load_started" from="LevelLoader" to="." method="_on_level_loader_level_load_started"]
[connection signal="level_loaded" from="LevelLoader" to="." method="_on_level_loader_level_loaded"]
[connection signal="levels_finished" from="LevelLoader" to="." method="_on_level_loader_levels_finished"]
